# cs-app

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client.h  mainwindow.h
client/src/: client.cpp  main.cpp  mainwindow.cpp
client/src/ui/: mainwindow.ui
common/: CMakeLists.txt
common/include/: network.h  protocol.h  serialization.h  utils.h
common/src/: network.cpp  protocol.cpp  serialization.cpp  utils.cpp
deploy/: docker-compose.yml
deploy/docker/client/: Dockerfile
deploy/docker/logger/: Dockerfile
deploy/docker/server1/: Dockerfile
deploy/docker/server2/: Dockerfile
logger/: CMakeLists.txt
logger/include/: fifo_handler.h  log_writer.h  logger.h
logger/src/: fifo_handler.cpp  log_writer.cpp  logger.cpp  main.cpp
server1/: CMakeLists.txt
server1/include/: disk_info.h  filesystem_info.h  keyboard_info.h  server1.h
server1/src/: disk_info.cpp  filesystem_info.cpp  keyboard_info.cpp  main.cpp  server1.cpp
server2/: CMakeLists.txt
server2/include/: process_info.h  server2.h  thread_info.h
server2/src/: main.cpp  process_info.cpp  server2.cpp  thread_info.cpp
tests/: CMakeLists.txt  test_common.cpp  test_protocol.cpp  test_serialization.cpp  test_utils.cpp
